--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="quiz.js"></script>
 <body>
          <div id="main">
-      <div class="h-tag">
-      <h2>login for Quiz</h2>
+      <div class="h">
+      <h2 align="center">Login for Quiz</h2>
       </div>
       <div class="login">
-      <table cellspacing="2" align="center" cellpadding="8" border="0">
+      <table cellspacing="2" align="center" cellpadding="8" border="3">
       <tr>
       <td align="right">Enter Name :</td>
       <td><input type="text" placeholder="Enter user here" id="t1" class="tb" /></td>
@@ -38,7 +38,7 @@
       <td></td>
       <td>
       <input type="reset" value="Clear Form" onclick="clearFunc()" id="res" class="btn" />
-      <input type="submit" value="Create Account" class="btn" onclick="registration()" /></td>
+      <input type="submit" value="Login" class="btn" onclick="registration()" /></td>
       </tr>
       </table>
       </div>
